--- a/week-5/Lab-5d/Project.toml
+++ b/week-5/Lab-5d/Project.toml
@@ -1,3 +1,6 @@
 [deps]
 FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
+ImageInTerminal = "d8c32880-2388-543b-8c61-d9f865259254"
 Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
+ProgressBars = "49802e3a-d2f1-5c88-81d8-b72133a6f568"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
