--- a/week-6/Lab-6d/Project.toml
+++ b/week-6/Lab-6d/Project.toml
@@ -1,2 +1,4 @@
 [deps]
 Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
+JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
+TOML = "fa267f1f-6049-4f14-aa54-33bafae1ed76"
