--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,6 @@ week-3/Lab-3d/.DS_Store
 week-3/Lab-3d/.DS_Store
 week-3/.DS_Store
 week-5/Lab-5d/.DS_Store
+week-10/.DS_Store
+week-10/Lab-10b/.DS_Store
+week-8/Lab-8d/.DS_Store
